welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.code
avance()
do{
	avance()
}while(estSurBlanc!=vrai)
